# obs2nlm

./: 404.html  CNAME  CONTRIBUTING.md  ChangeLog.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: style-and-lint.yaml
changelog/: index.html
docs/: index.md
src/obs2nlm/: __init__.py  obs2nlm.py
