[project]
name = "obs2nlm"
version = "1.1.1"
description = "Convert Obsidian vaults to NotebookLM sources"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = []
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
keywords = [
    "obsidian",
    "notebooklm",
    "ai",
    "llm",
    "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.scripts]
obs2nlm = "obs2nlm:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "mkdocs-material>=9.6.9",
    "markdown-exec>=1.10.2",
]
